cool.output
Terminals unused in grammar

   ASSIGN
   ERROR


State 6 conflicts: 3 reduce/reduce
State 12 conflicts: 2 shift/reduce
State 19 conflicts: 2 shift/reduce
State 23 conflicts: 1 shift/reduce
State 39 conflicts: 2 reduce/reduce
State 57 conflicts: 15 shift/reduce
State 72 conflicts: 9 shift/reduce
State 74 conflicts: 15 shift/reduce
State 75 conflicts: 9 shift/reduce
State 80 conflicts: 9 shift/reduce
State 96 conflicts: 2 shift/reduce
State 97 conflicts: 9 shift/reduce
State 104 conflicts: 2 shift/reduce
State 105 conflicts: 2 shift/reduce
State 106 conflicts: 2 shift/reduce
State 107 conflicts: 2 shift/reduce
State 108 conflicts: 2 shift/reduce
State 109 conflicts: 2 shift/reduce
State 110 conflicts: 2 shift/reduce
State 124 conflicts: 15 shift/reduce
State 131 conflicts: 3 reduce/reduce
State 140 conflicts: 9 shift/reduce
State 144 conflicts: 15 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error '\n'

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    7      | error '\n'

    8 feature_list: /* empty */
    9             | feature ';'
   10             | feature_list feature ';'
   11             | error ';'

   12 feature: OBJECTID ':' TYPEID
   13        | OBJECTID ':' TYPEID DARROW expr
   14        | OBJECTID '(' ')' ':' TYPEID '{' expr '}'
   15        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   16        | error '\n'

   17 formal_list: /* empty */
   18            | formal
   19            | formal_list ',' formal
   20            | error '\n'

   21 formal: OBJECTID ':' TYPEID
   22       | error '\n'

   23 expr_list: /* empty */
   24          | expr ';'
   25          | expr_list expr ';'
   26          | error '\n'

   27 expr: OBJECTID DARROW expr
   28     | OBJECTID '(' expr_list ')'
   29     | expr '.' OBJECTID '(' expr_list ')'
   30     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   31     | IF expr THEN expr ELSE expr FI
   32     | WHILE expr LOOP expr POOL
   33     | '{' expr_list '}'
   34     | LET OBJECTID ':' TYPEID IN expr
   35     | CASE expr OF case_list ESAC
   36     | NEW TYPEID
   37     | ISVOID expr
   38     | expr '+' expr
   39     | expr '-' expr
   40     | expr '*' expr
   41     | expr '/' expr
   42     | '~' expr
   43     | expr '<' expr
   44     | expr '=' expr
   45     | expr LE expr
   46     | NOT expr
   47     | '(' expr ')'
   48     | OBJECTID
   49     | INT_CONST
   50     | STR_CONST
   51     | BOOL_CONST
   52     | error '\n'

   53 case_list: /* empty */
   54          | case
   55          | case_list case
   56          | error '\n'

   57 case: OBJECTID ':' TYPEID DARROW expr ';'
   58     | error '\n'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 4 7 16 20 22 26 52 56 58
'(' (40) 14 15 28 29 30 47
')' (41) 14 15 28 29 30 47
'*' (42) 40
'+' (43) 38
',' (44) 19
'-' (45) 39
'.' (46) 29 30
'/' (47) 41
':' (58) 12 13 14 15 21 34 57
';' (59) 5 6 9 10 11 24 25 57
'<' (60) 43
'=' (61) 44
'@' (64) 30
'{' (123) 5 6 14 15 33
'}' (125) 5 6 14 15 33
'~' (126) 42
error (256) 4 7 11 16 20 22 26 52 56 58
CLASS (258) 5 6
ELSE (259) 31
FI (260) 31
IF (261) 31
IN (262) 34
INHERITS (263) 6
LET (264) 34
LOOP (265) 32
POOL (266) 32
THEN (267) 31
WHILE (268) 32
CASE (269) 35
ESAC (270) 35
OF (271) 35
DARROW (272) 13 27 57
NEW (273) 36
ISVOID (274) 37
STR_CONST (275) 50
INT_CONST (276) 49
BOOL_CONST (277) 51
TYPEID (278) 5 6 12 13 14 15 21 30 34 36 57
OBJECTID (279) 12 13 14 15 21 27 28 29 30 34 48 57
ASSIGN (280)
NOT (281) 46
LE (282) 45
ERROR (283)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3 4, on right: 1 3
class (49)
    on left: 5 6 7, on right: 2 3
feature_list (50)
    on left: 8 9 10 11, on right: 5 6 10
feature (51)
    on left: 12 13 14 15 16, on right: 9 10
formal_list (52)
    on left: 17 18 19 20, on right: 15 19
formal (53)
    on left: 21 22, on right: 18 19
expr_list (54)
    on left: 23 24 25 26, on right: 25 28 29 30 33
expr (55)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45 46 47 48 49 50 51 52, on right: 13 14 15 24 25 27 29 30 31 32
    34 35 37 38 39 40 41 42 43 44 45 46 47 57
case_list (56)
    on left: 53 54 55 56, on right: 35 55
case (57)
    on left: 57 58, on right: 54 55


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    4 class_list: error . '\n'
    7 class: error . '\n'

    '\n'  shift, and go to state 6


state 2

    5 class: CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 10


state 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 6

    4 class_list: error '\n' .
    7 class: error '\n' .

    $end      reduce using rule 4 (class_list)
    $end      [reduce using rule 7 (class)]
    error     reduce using rule 4 (class_list)
    error     [reduce using rule 7 (class)]
    CLASS     reduce using rule 4 (class_list)
    CLASS     [reduce using rule 7 (class)]
    $default  reduce using rule 4 (class_list)


state 7

    5 class: CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


state 8

    0 $accept: program $end .

    $default  accept


state 9

    7 class: error . '\n'

    '\n'  shift, and go to state 13


state 10

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 11

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 14


state 12

    5 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    error     [reduce using rule 8 (feature_list)]
    OBJECTID  [reduce using rule 8 (feature_list)]
    '}'       reduce using rule 8 (feature_list)

    feature_list  go to state 17
    feature       go to state 18


state 13

    7 class: error '\n' .

    $default  reduce using rule 7 (class)


state 14

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 19


state 15

   11 feature_list: error . ';'
   16 feature: error . '\n'

    '\n'  shift, and go to state 20
    ';'   shift, and go to state 21


state 16

   12 feature: OBJECTID . ':' TYPEID
   13        | OBJECTID . ':' TYPEID DARROW expr
   14        | OBJECTID . '(' ')' ':' TYPEID '{' expr '}'
   15        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 22
    '('  shift, and go to state 23


state 17

    5 class: CLASS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature ';'

    error     shift, and go to state 24
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 25

    feature  go to state 26


state 18

    9 feature_list: feature . ';'

    ';'  shift, and go to state 27


state 19

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    error     [reduce using rule 8 (feature_list)]
    OBJECTID  [reduce using rule 8 (feature_list)]
    '}'       reduce using rule 8 (feature_list)

    feature_list  go to state 28
    feature       go to state 18


state 20

   16 feature: error '\n' .

    $default  reduce using rule 16 (feature)


state 21

   11 feature_list: error ';' .

    $default  reduce using rule 11 (feature_list)


state 22

   12 feature: OBJECTID ':' . TYPEID
   13        | OBJECTID ':' . TYPEID DARROW expr

    TYPEID  shift, and go to state 29


state 23

   14 feature: OBJECTID '(' . ')' ':' TYPEID '{' expr '}'
   15        | OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    error     shift, and go to state 30
    OBJECTID  shift, and go to state 31
    ')'       shift, and go to state 32

    ')'  [reduce using rule 17 (formal_list)]
    ','  reduce using rule 17 (formal_list)

    formal_list  go to state 33
    formal       go to state 34


state 24

   16 feature: error . '\n'

    '\n'  shift, and go to state 20


state 25

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 35


state 26

   10 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 36


state 27

    9 feature_list: feature ';' .

    $default  reduce using rule 9 (feature_list)


state 28

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature ';'

    error     shift, and go to state 24
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 37

    feature  go to state 26


state 29

   12 feature: OBJECTID ':' TYPEID .
   13        | OBJECTID ':' TYPEID . DARROW expr

    DARROW  shift, and go to state 38

    $default  reduce using rule 12 (feature)


state 30

   20 formal_list: error . '\n'
   22 formal: error . '\n'

    '\n'  shift, and go to state 39


state 31

   21 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 40


state 32

   14 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 41


state 33

   15 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   19 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 42
    ','  shift, and go to state 43


state 34

   18 formal_list: formal .

    $default  reduce using rule 18 (formal_list)


state 35

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 36

   10 feature_list: feature_list feature ';' .

    $default  reduce using rule 10 (feature_list)


state 37

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 44


state 38

   13 feature: OBJECTID ':' TYPEID DARROW . expr

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    expr  go to state 60


state 39

   20 formal_list: error '\n' .
   22 formal: error '\n' .

    ')'       reduce using rule 20 (formal_list)
    ')'       [reduce using rule 22 (formal)]
    ','       reduce using rule 20 (formal_list)
    ','       [reduce using rule 22 (formal)]
    $default  reduce using rule 20 (formal_list)


state 40

   21 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 61


state 41

   14 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 62


state 42

   15 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 63


state 43

   19 formal_list: formal_list ',' . formal

    error     shift, and go to state 64
    OBJECTID  shift, and go to state 31

    formal  go to state 65


state 44

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


state 45

   52 expr: error . '\n'

    '\n'  shift, and go to state 66


state 46

   31 expr: IF . expr THEN expr ELSE expr FI

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    expr  go to state 67


state 47

   34 expr: LET . OBJECTID ':' TYPEID IN expr

    OBJECTID  shift, and go to state 68


state 48

   32 expr: WHILE . expr LOOP expr POOL

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    expr  go to state 69


state 49

   35 expr: CASE . expr OF case_list ESAC

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    expr  go to state 70


state 50

   36 expr: NEW . TYPEID

    TYPEID  shift, and go to state 71


state 51

   37 expr: ISVOID . expr

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    expr  go to state 72


state 52

   50 expr: STR_CONST .

    $default  reduce using rule 50 (expr)


state 53

   49 expr: INT_CONST .

    $default  reduce using rule 49 (expr)


state 54

   51 expr: BOOL_CONST .

    $default  reduce using rule 51 (expr)


state 55

   27 expr: OBJECTID . DARROW expr
   28     | OBJECTID . '(' expr_list ')'
   48     | OBJECTID .

    DARROW  shift, and go to state 73
    '('     shift, and go to state 74

    $default  reduce using rule 48 (expr)


state 56

   46 expr: NOT . expr

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    expr  go to state 75


state 57

   33 expr: '{' . expr_list '}'

    error       shift, and go to state 76
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    error       [reduce using rule 23 (expr_list)]
    IF          [reduce using rule 23 (expr_list)]
    LET         [reduce using rule 23 (expr_list)]
    WHILE       [reduce using rule 23 (expr_list)]
    CASE        [reduce using rule 23 (expr_list)]
    NEW         [reduce using rule 23 (expr_list)]
    ISVOID      [reduce using rule 23 (expr_list)]
    STR_CONST   [reduce using rule 23 (expr_list)]
    INT_CONST   [reduce using rule 23 (expr_list)]
    BOOL_CONST  [reduce using rule 23 (expr_list)]
    OBJECTID    [reduce using rule 23 (expr_list)]
    NOT         [reduce using rule 23 (expr_list)]
    '{'         [reduce using rule 23 (expr_list)]
    '}'         reduce using rule 23 (expr_list)
    '('         [reduce using rule 23 (expr_list)]
    '~'         [reduce using rule 23 (expr_list)]

    expr_list  go to state 77
    expr       go to state 78


state 58

   47 expr: '(' . expr ')'

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    expr  go to state 79


state 59

   42 expr: '~' . expr

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    expr  go to state 80


state 60

   13 feature: OBJECTID ':' TYPEID DARROW expr .
   29 expr: expr . '.' OBJECTID '(' expr_list ')'
   30     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . '=' expr
   45     | expr . LE expr

    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    '.'  shift, and go to state 88
    '@'  shift, and go to state 89

    $default  reduce using rule 13 (feature)


state 61

   21 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 21 (formal)


state 62

   14 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 90


state 63

   15 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 91


state 64

   22 formal: error . '\n'

    '\n'  shift, and go to state 92


state 65

   19 formal_list: formal_list ',' formal .

    $default  reduce using rule 19 (formal_list)


state 66

   52 expr: error '\n' .

    $default  reduce using rule 52 (expr)


state 67

   29 expr: expr . '.' OBJECTID '(' expr_list ')'
   30     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   31     | IF expr . THEN expr ELSE expr FI
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . '=' expr
   45     | expr . LE expr

    THEN  shift, and go to state 93
    LE    shift, and go to state 81
    '<'   shift, and go to state 82
    '='   shift, and go to state 83
    '+'   shift, and go to state 84
    '-'   shift, and go to state 85
    '*'   shift, and go to state 86
    '/'   shift, and go to state 87
    '.'   shift, and go to state 88
    '@'   shift, and go to state 89


state 68

   34 expr: LET OBJECTID . ':' TYPEID IN expr

    ':'  shift, and go to state 94


state 69

   29 expr: expr . '.' OBJECTID '(' expr_list ')'
   30     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   32     | WHILE expr . LOOP expr POOL
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . '=' expr
   45     | expr . LE expr

    LOOP  shift, and go to state 95
    LE    shift, and go to state 81
    '<'   shift, and go to state 82
    '='   shift, and go to state 83
    '+'   shift, and go to state 84
    '-'   shift, and go to state 85
    '*'   shift, and go to state 86
    '/'   shift, and go to state 87
    '.'   shift, and go to state 88
    '@'   shift, and go to state 89


state 70

   29 expr: expr . '.' OBJECTID '(' expr_list ')'
   30     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   35     | CASE expr . OF case_list ESAC
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . '=' expr
   45     | expr . LE expr

    OF   shift, and go to state 96
    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    '.'  shift, and go to state 88
    '@'  shift, and go to state 89


state 71

   36 expr: NEW TYPEID .

    $default  reduce using rule 36 (expr)


state 72

   29 expr: expr . '.' OBJECTID '(' expr_list ')'
   30     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   37     | ISVOID expr .
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . '=' expr
   45     | expr . LE expr

    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    '.'  shift, and go to state 88
    '@'  shift, and go to state 89

    LE        [reduce using rule 37 (expr)]
    '<'       [reduce using rule 37 (expr)]
    '='       [reduce using rule 37 (expr)]
    '+'       [reduce using rule 37 (expr)]
    '-'       [reduce using rule 37 (expr)]
    '*'       [reduce using rule 37 (expr)]
    '/'       [reduce using rule 37 (expr)]
    '.'       [reduce using rule 37 (expr)]
    '@'       [reduce using rule 37 (expr)]
    $default  reduce using rule 37 (expr)


state 73

   27 expr: OBJECTID DARROW . expr

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    expr  go to state 97


state 74

   28 expr: OBJECTID '(' . expr_list ')'

    error       shift, and go to state 76
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    error       [reduce using rule 23 (expr_list)]
    IF          [reduce using rule 23 (expr_list)]
    LET         [reduce using rule 23 (expr_list)]
    WHILE       [reduce using rule 23 (expr_list)]
    CASE        [reduce using rule 23 (expr_list)]
    NEW         [reduce using rule 23 (expr_list)]
    ISVOID      [reduce using rule 23 (expr_list)]
    STR_CONST   [reduce using rule 23 (expr_list)]
    INT_CONST   [reduce using rule 23 (expr_list)]
    BOOL_CONST  [reduce using rule 23 (expr_list)]
    OBJECTID    [reduce using rule 23 (expr_list)]
    NOT         [reduce using rule 23 (expr_list)]
    '{'         [reduce using rule 23 (expr_list)]
    '('         [reduce using rule 23 (expr_list)]
    ')'         reduce using rule 23 (expr_list)
    '~'         [reduce using rule 23 (expr_list)]

    expr_list  go to state 98
    expr       go to state 78


state 75

   29 expr: expr . '.' OBJECTID '(' expr_list ')'
   30     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . '=' expr
   45     | expr . LE expr
   46     | NOT expr .

    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    '.'  shift, and go to state 88
    '@'  shift, and go to state 89

    LE        [reduce using rule 46 (expr)]
    '<'       [reduce using rule 46 (expr)]
    '='       [reduce using rule 46 (expr)]
    '+'       [reduce using rule 46 (expr)]
    '-'       [reduce using rule 46 (expr)]
    '*'       [reduce using rule 46 (expr)]
    '/'       [reduce using rule 46 (expr)]
    '.'       [reduce using rule 46 (expr)]
    '@'       [reduce using rule 46 (expr)]
    $default  reduce using rule 46 (expr)


state 76

   26 expr_list: error . '\n'
   52 expr: error . '\n'

    '\n'  shift, and go to state 99


state 77

   25 expr_list: expr_list . expr ';'
   33 expr: '{' expr_list . '}'

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '}'         shift, and go to state 100
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    expr  go to state 101


state 78

   24 expr_list: expr . ';'
   29 expr: expr . '.' OBJECTID '(' expr_list ')'
   30     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . '=' expr
   45     | expr . LE expr

    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    ';'  shift, and go to state 102
    '.'  shift, and go to state 88
    '@'  shift, and go to state 89


state 79

   29 expr: expr . '.' OBJECTID '(' expr_list ')'
   30     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . '=' expr
   45     | expr . LE expr
   47     | '(' expr . ')'

    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    ')'  shift, and go to state 103
    '.'  shift, and go to state 88
    '@'  shift, and go to state 89


state 80

   29 expr: expr . '.' OBJECTID '(' expr_list ')'
   30     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | '~' expr .
   43     | expr . '<' expr
   44     | expr . '=' expr
   45     | expr . LE expr

    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    '.'  shift, and go to state 88
    '@'  shift, and go to state 89

    LE        [reduce using rule 42 (expr)]
    '<'       [reduce using rule 42 (expr)]
    '='       [reduce using rule 42 (expr)]
    '+'       [reduce using rule 42 (expr)]
    '-'       [reduce using rule 42 (expr)]
    '*'       [reduce using rule 42 (expr)]
    '/'       [reduce using rule 42 (expr)]
    '.'       [reduce using rule 42 (expr)]
    '@'       [reduce using rule 42 (expr)]
    $default  reduce using rule 42 (expr)


state 81

   45 expr: expr LE . expr

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    expr  go to state 104


state 82

   43 expr: expr '<' . expr

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    expr  go to state 105


state 83

   44 expr: expr '=' . expr

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    '~'         shift, and go to state 59

    expr  go to state 106


state 84

   38 expr: expr '+' . expr
